cmake_minimum_required(VERSION 3.16)
project(AoC_2022)

set(CMAKE_CXX_STANDARD 20)

include_directories("include")


add_executable(Day1 lib/Day1/main.cpp)
add_executable(Day2 lib/Day2/main.cpp)
add_executable(Day3 lib/Day3/main.cpp)
add_executable(Day4 lib/Day4/main.cpp)
add_executable(Day5 lib/Day5/main.cpp)
add_executable(Day6 lib/Day6/main.cpp)
add_executable(Day7 lib/Day7/main.cpp)
add_executable(Day8 lib/Day8/main.cpp)
add_executable(Day9 lib/Day9/main.cpp)
add_executable(Day10 lib/Day10/main.cpp)
add_executable(Day11 lib/Day11/main.cpp)
add_executable(Day12 lib/Day12/main.cpp)
add_executable(Day13 lib/Day13/main.cpp)
add_executable(Day14 lib/Day14/main.cpp)
add_executable(Day15 lib/Day15/main.cpp)
add_executable(Day16 lib/Day16/main.cpp)
add_executable(Day17 lib/Day17/main.cpp)
add_executable(Day18 lib/Day18/main.cpp)
add_executable(Day19 lib/Day19/main.cpp)
add_executable(Day20 lib/Day20/main.cpp)
add_executable(Day21 lib/Day21/main.cpp)
add_executable(Day22 lib/Day22/main.cpp)
add_executable(Day23 lib/Day23/main.cpp)
add_executable(Day24 lib/Day24/main.cpp)
add_executable(Day25 lib/Day25/main.cpp)
